k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-spring-boot
  namespace: demo-pic
spec:
  selector:
    app: hello-spring-boot
  ports:
  - name: web
    port: 8080
    targetPort: 8080
